--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+
 html,
 body {
   padding: 0;
@@ -13,4 +15,19 @@ a {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+}
+
+button {
+  cursor: pointer;
+  border: none;
+}
+
+button:hover {
+  background-color: none;
+}
+
+input:focus {
+  outline: none;
 }
