feat: create the ContatoContext

--- a/styles/components/PopUpManagement.module.css
+++ b/styles/components/PopUpManagement.module.css
@@ -1,7 +1,8 @@
-.container {
+.background {
   position: absolute;
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.4);
   transition: all .3s;
+  cursor: pointer;
 }
